# mneme

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_indexing_request.yml
.github/workflows/: build-index.yml  docker.yml  release-drafter.yml  release.yml  test.yml  zt-slop.yml
deploy/: docker-compose.yml  mneme.cron  oas-atlas.cron  systemd-mneme.service  systemd-oas-atlas.service
desktop/: .gitignore  README.md  eslint.config.mjs  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json
desktop/resources/icon/: icon.icns
desktop/scripts/: build-sidecar.mjs  clean-sidecar.mjs
desktop/src/main/: api-client.ts  credential-store.ts  index.ts  ipc.ts  server-supervisor.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: App.tsx  global.d.ts  styles.css
desktop/src/renderer/components/: States.tsx
desktop/src/renderer/screens/: CatalogScreen.tsx  CredentialsScreen.tsx  OverviewScreen.tsx  SourcesScreen.tsx
desktop/src/shared/: contracts.ts  validation.test.ts  validation.ts
examples/: auth.example.json  seeds.popular.txt  seeds.txt
examples/specs/: todo.yaml
src/mneme/: __init__.py  auth.py  call_template.py  cli.py  demo.py  doctor.py  fetch.py  http_client.py  mcp_config.py  mcp_server.py  util.py
src/mneme/api/: app.py  models.py
src/mneme/crawl/: __init__.py  discover.py
src/mneme/index/: __init__.py  db.py  ingest.py  search.py
src/mneme/memory/: __init__.py  db.py  notes.py  workspace.py
src/mneme/normalize/: operations.py  refs.py  schemas.py
src/oas_atlas/: __init__.py  auth.py  cli.py  demo.py  doctor.py  fetch.py  http_client.py  mcp_config.py  mcp_server.py  util.py
src/oas_atlas/api/: app.py
src/oas_atlas/crawl/: discover.py  seeds.py
src/oas_atlas/index/: __init__.py  db.py  ingest.py  search.py
src/oas_atlas/normalize/: __init__.py  load.py  operations.py  refs.py  schemas.py
tests/: conftest.py  test_api_management.py  test_discovery_extract.py  test_http_client.py  test_ingest_search.py  test_library_python.py  test_library_typescript.py  test_mcp_config.py  test_mcp_index.py  test_mcp_server.py  test_notes.py  test_unified_search.py  test_workspace.py
