[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oas-atlas"
version = "0.2.0"
description = "Agent-optimized search over public OpenAPI specifications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "OAS Atlas Contributors" }
]
keywords = ["openapi", "agents", "llm", "tools", "search", "crawler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.27",
]


[project.optional-dependencies]
mcp = [
  "mcp[cli]>=1.27.0",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/Joshwani/oas-atlas"
Repository = "https://github.com/Joshwani/oas-atlas"
Source = "https://github.com/Joshwani/oas-atlas"
Issues = "https://github.com/Joshwani/oas-atlas/issues"
"Bug Tracker" = "https://github.com/Joshwani/oas-atlas/issues"
Changelog = "https://github.com/Joshwani/oas-atlas/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Joshwani/oas-atlas#readme"

[project.scripts]
oas-atlas = "oas_atlas.cli:main"
oas-atlas-mcp = "oas_atlas.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
