[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme-server"
version = "0.4.0"
description = "Mneme: a self-hosted catalog of callables (OpenAPI operations, library symbols) and persistent memory for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mneme Contributors" }
]
keywords = [
  "openapi",
  "agents",
  "llm",
  "tools",
  "search",
  "crawler",
  "mcp",
  "memory",
  "library-index",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.27",
]


[project.optional-dependencies]
mcp = [
  "mcp[cli]>=1.27.0",
]
pylib = [
  "griffe>=0.45",
]
jslib = [
  "tree-sitter>=0.22",
  "tree-sitter-typescript>=0.23",
]
libraries = [
  "griffe>=0.45",
  "tree-sitter>=0.22",
  "tree-sitter-typescript>=0.23",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "griffe>=0.45",
  "tree-sitter>=0.22",
  "tree-sitter-typescript>=0.23",
]

[project.urls]
Homepage = "https://github.com/Joshwani/mneme"
Repository = "https://github.com/Joshwani/mneme"
Source = "https://github.com/Joshwani/mneme"
Issues = "https://github.com/Joshwani/mneme/issues"
"Bug Tracker" = "https://github.com/Joshwani/mneme/issues"
Changelog = "https://github.com/Joshwani/mneme/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Joshwani/mneme#readme"

[project.scripts]
mneme = "mneme.cli:main"
mneme-mcp = "mneme.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
